--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -16,7 +16,7 @@
     font-weight: bold;
     font-size: 50px;
     font-style: italic;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:sans-serif;
     margin-top: 1%;
     display: flex;
     justify-content: center;
