--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 10vh;
     font-weight: bold;
-    font-size: 50px;
+    font-size: 3rem;
     font-style: italic;
     font-family:sans-serif;
     margin-top: 1%;
